--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
   <link rel="canonical" href="https://topzlots.online/">
   <link rel="alternate" href="https://topzlots.online/" hreflang="en">
   <link rel="alternate" href="https://topzlots.online/" hreflang="x-default">
-
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="stylesheet" href="/styles.css?v=3">
 </head>
@@ -86,7 +85,13 @@
           </div>
           <div class="hero__side">
             <div class="hero__game-embed" aria-label="Rise of Orpheus game">
-              <iframe src="/game/rise-of-orpheus.php" title="Rise of Orpheus social casino game" loading="lazy"></iframe>
+              <iframe
+                src="https://release.playngonetwork.com/casino/ContainerLauncher?pid=2&amp;gid=riseoforpheus&amp;lang=en_GB&amp;practice=1&amp;channel=desktop&amp;demo=2"
+                title="Rise of Orpheus social casino game"
+                loading="lazy"
+                referrerpolicy="no-referrer"
+                allow="autoplay"
+              ></iframe>
             </div>
             <article class="hero__pulse">
               <h3>Tonight’s Flow</h3>
