--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="hero__side">
             <div class="hero__game-embed" aria-label="Rise of Orpheus game">
               <iframe
-                src="https://release.playngonetwork.com/casino/ContainerLauncher?pid=2&amp;gid=riseoforpheus&amp;lang=en_GB&amp;practice=1&amp;channel=desktop&amp;demo=2"
+                src="https://released.playngonetwork.com/casino/ContainerLauncher?pid=2&amp;gid=riseoforpheus&amp;lang=en_GB&amp;practice=1&amp;channel=desktop&amp;demo=2&amp;refresh=1758626839905"
                 title="Rise of Orpheus social casino game"
                 loading="lazy"
                 referrerpolicy="no-referrer"
